name:             format
version:          0.0.0
stability:        experimental
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011 Simon Hengel
author:           Simon Hengel
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.6

library
  ghc-options: -Wall
  hs-source-dirs: src
  exposed-modules:
      Text.Format
    , Text.Format.Formattable
  other-modules:
      Text.Format.Internal
  build-depends:
      base
    , template-haskell
    , text
